Update to 1.16.5 and switch from Java 14 to Java 8